--- a/package.json
+++ b/package.json
@@ -18,10 +18,21 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "test:ci": "react-scripts test --coverage --watchAll=false",
+    "test:watch": "react-scripts test --watchAll=false",
+    "analyze": "npm run build && npx serve -s build",
+    "clean": "rm -rf build node_modules/.cache"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "postcss": "^8.4.31"
+    }
   },
   "eslintConfig": {
     "extends": [
