--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "patch-package",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": "npx eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npx eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "test:ci": "react-scripts test --coverage --watchAll=false",
     "test:watch": "react-scripts test --watchAll=false",
     "analyze": "npm run build && npx serve -s build",
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.57.1",
     "tailwindcss": "^3.4.4"
   }
 }
