--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       run: pnpm install --frozen-lockfile
       
     - name: Run linting
-      run: pnpm run lint --if-present
+      run: pnpm run lint:ci
       
     - name: Run tests
       run: pnpm test -- --coverage --watchAll=false
