chore: add Jest configuration for testing with coverage thresholds and update CI workflow to use test:ci script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       run: pnpm run lint:ci
       
     - name: Run tests
-      run: pnpm test -- --coverage --watchAll=false
+      run: pnpm run test:ci
       
     - name: Build application
       run: pnpm run build
