--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -11,6 +11,11 @@ jobs:
     name: Code Quality Checks
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
