chore: add permissions to GitHub Actions workflows for content and pull request access

--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -1,5 +1,9 @@
 name: Dependency Update
 
+permissions:
+  contents: read
+  pull-requests: write
+
 on:
   schedule:
     # Run every Monday at 9 AM UTC
