--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "patch-package": "^8.0.1",
-    "postcss": "^8.4.34",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -34,7 +34,9 @@
   },
   "pnpm": {
     "overrides": {
-      "postcss": "^8.4.31"
+      "nth-check": "^2.0.1",
+      "postcss": "^8.4.31",
+      "webpack-dev-server@<=5.2.0": ">=5.2.1"
     }
   },
   "eslintConfig": {
@@ -62,6 +64,6 @@
     "eslint": "^8.57.1",
     "identity-obj-proxy": "^3.0.0",
     "jest-transform-stub": "^2.0.0",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.17"
   }
 }
