--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ on:
     branches: [ master, main ]
   pull_request:
     branches: [ master, main ]
+  schedule:
+    # Run every Friday at 9 AM UTC
+    - cron: '0 9 * * 5'
 
 jobs:
   test:
