--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "overrides": {
       "nth-check": "^2.0.1",
       "postcss": "^8.4.31",
-      "webpack-dev-server@<=5.2.0": ">=5.2.1"
+      "webpack-dev-server@<=5.2.0": ">=5.2.1",
+      "js-yaml@<4.1.1": ">=4.1.1"
     }
   },
   "eslintConfig": {
