chore: update test scripts and dependencies
- Changed test command in package.json to use a custom script (node scripts/test.js) instead of react-scripts.
- Updated test commands for CI and watch mode to align with the new script.
- Added js-yaml version constraint in pnpm-lock.yaml to ensure compatibility.
- Removed outdated dependencies from pnpm-lock.yaml.

This update enhances test execution and maintains dependency integrity.

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "node scripts/test.js",
     "eject": "react-scripts eject",
     "postinstall": "patch-package",
     "lint": "npx eslint src --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "npx eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "lint:ci": "npx eslint src --ext .js,.jsx,.ts,.tsx --max-warnings 0",
-    "test:ci": "react-scripts test --coverage --watchAll=false",
-    "test:watch": "react-scripts test --watchAll=false",
+    "test:ci": "node scripts/test.js --coverage --watchAll=false",
+    "test:watch": "node scripts/test.js --watchAll=false",
     "analyze": "npm run build && npx serve -s build",
     "clean": "rm -rf build node_modules/.cache"
   },
