--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       run: pnpm install --frozen-lockfile
       
     - name: Run tests
-      run: pnpm test -- --coverage --watchAll=false
+      run: pnpm run test:ci
       
     - name: Build application
       run: pnpm run build
