--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
       "nth-check": "^2.0.1",
       "postcss": "^8.5.6",
       "webpack-dev-server@<=5.2.0": ">=5.2.1",
-      "js-yaml@<4.1.1": ">=4.1.1"
+      "js-yaml@<4.1.1": ">=4.1.1",
+      "node-forge@<1.3.2": ">=1.3.2"
     }
   },
   "eslintConfig": {
