--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
       "postcss": "^8.5.6",
       "webpack-dev-server@<=5.2.0": ">=5.2.1",
       "js-yaml@<4.1.1": ">=4.1.1",
-      "node-forge@<1.3.2": ">=1.3.2"
+      "node-forge@<1.3.2": ">=1.3.2",
+      "qs@<6.14.1": ">=6.14.1"
     }
   },
   "eslintConfig": {
