--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@testing-library/user-event": "^14.6.1",
     "patch-package": "^8.0.1",
     "postcss": "^8.5.6",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^5.1.0"
   },
@@ -39,7 +39,8 @@
       "webpack-dev-server@<=5.2.0": ">=5.2.1",
       "js-yaml@<4.1.1": ">=4.1.1",
       "node-forge@<1.3.2": ">=1.3.2",
-      "qs@<6.14.1": ">=6.14.1"
+      "qs@<6.14.1": ">=6.14.1",
+      "eslint@<9.26.0": ">=9.26.0"
     }
   },
   "eslintConfig": {
