--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "test": "node scripts/test.js",
     "eject": "react-scripts eject",
     "postinstall": "patch-package",
-    "lint": "npx eslint src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "npx eslint src --ext .js,.jsx,.ts,.tsx --fix",
-    "lint:ci": "npx eslint src --ext .js,.jsx,.ts,.tsx --max-warnings 0",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint:ci": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --max-warnings 0",
     "test:ci": "node scripts/test.js --coverage --watchAll=false",
     "test:watch": "node scripts/test.js --watchAll=false",
     "analyze": "npm run build && npx serve -s build",
@@ -40,14 +40,8 @@
       "js-yaml@<4.1.1": ">=4.1.1",
       "node-forge@<1.3.2": ">=1.3.2",
       "qs@<6.14.1": ">=6.14.1",
-      "eslint@<9.26.0": ">=9.26.0"
+      "eslint": ">=9.26.0"
     }
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -64,8 +58,14 @@
   "devDependencies": {
     "@babel/preset-env": "^7.28.6",
     "@babel/preset-react": "^7.28.5",
+    "@eslint/js": "^9.0.0",
+    "@eslint/eslintrc": "^3.3.3",
     "babel-jest": "^30.2.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.0.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "globals": "^17.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-transform-stub": "^2.0.0",
     "tailwindcss": "^4.1.18"
