--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "web-vitals": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "node scripts/test.js",
     "eject": "react-scripts eject",
     "postinstall": "patch-package",
