--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "js-yaml@<4.1.1": ">=4.1.1",
       "node-forge@<1.3.2": ">=1.3.2",
       "qs@<6.14.1": ">=6.14.1",
-      "eslint": ">=9.26.0"
+      "eslint": "^9.39.2"
     }
   },
   "browserslist": {
