--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
       "js-yaml@<4.1.1": ">=4.1.1",
       "node-forge@<1.3.2": ">=1.3.2",
       "qs@<6.14.1": ">=6.14.1",
-      "eslint": "^9.39.2"
+      "eslint": "^9.39.2",
+      "ajv@<8.18.0": ">=8.18.0",
+      "minimatch@<10.2.1": ">=10.2.1"
     }
   },
   "browserslist": {
@@ -68,6 +70,6 @@
     "globals": "^17.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-transform-stub": "^2.0.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.2.0"
   }
 }
