--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
       "qs@<6.14.1": ">=6.14.1",
       "eslint": "^9.39.2",
       "ajv@<8.18.0": ">=8.18.0",
+      "eslint>ajv": "^6.12.4",
+      "@eslint/eslintrc>ajv": "^6.12.4",
       "minimatch@<10.2.1": ">=10.2.1"
     }
   },
