--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
       "ajv@<8.18.0": ">=8.18.0",
       "eslint>ajv": "^6.12.4",
       "@eslint/eslintrc>ajv": "^6.12.4",
-      "minimatch@<10.2.1": ">=10.2.1"
+      "minimatch@<10.2.1": ">=10.2.1",
+      "test-exclude>minimatch": "^9.0.5"
     }
   },
   "browserslist": {
