--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
       "ajv@<8.18.0": ">=8.18.0",
       "eslint>ajv": "^6.12.4",
       "@eslint/eslintrc>ajv": "^6.12.4",
+      "schema-utils@2.7.0>ajv": "^6.12.4",
+      "schema-utils@2.7.1>ajv": "^6.12.4",
+      "schema-utils@3.3.0>ajv": "^6.12.4",
       "minimatch@<10.2.1": ">=10.2.1",
       "test-exclude>minimatch": "^3.1.2"
     }
