chore: add jsonpath dependency and update package manager in package.json and pnpm-lock.yaml

--- a/package.json
+++ b/package.json
@@ -48,8 +48,12 @@
       "schema-utils@2.7.1>ajv": "^6.12.4",
       "schema-utils@3.3.0>ajv": "^6.12.4",
       "minimatch@<10.2.1": ">=10.2.1",
-      "test-exclude>minimatch": "^3.1.2"
-    }
+      "test-exclude>minimatch": "^3.1.2",
+      "jsonpath": "npm:@livereach/jsonpath@^1.2.3"
+    },
+    "ignoredBuiltDependencies": [
+      "@livereach/jsonpath"
+    ]
   },
   "browserslist": {
     "production": [
@@ -77,5 +81,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-transform-stub": "^2.0.0",
     "tailwindcss": "^4.2.1"
-  }
+  },
+  "packageManager": "pnpm@10.30.3+sha512.c961d1e0a2d8e354ecaa5166b822516668b7f44cb5bd95122d590dd81922f606f5473b6d23ec4a5be05e7fcd18e8488d47d978bbe981872f1145d06e9a740017"
 }
